--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.2.4"
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
